--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "typescript": "^4.8.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.15",
     "nodemon": "^2.0.19",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.2"
   }
 }
