--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongodb": "^4.9.1",
+    "mongodb": "^4.7.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
